# okular-android-docview

./: .clang-tidy  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  OkularConfig.cmake.in  aboutdata.h  config-okular.h.cmake  cppcheck-suppressions.xml  cppcheck.xml  kdocumentviewer.h  okular_part.json  part.cpp  part.rc  xmlgui_helper.cpp  xmlgui_helper.h
appiumtests/: CMakeLists.txt  okulartest.py
autotests/: CMakeLists.txt  addremoveannotationtest.cpp  annotationstest.cpp  annotationtoolbartest.cpp  calculatetexttest.cpp  distfreemodetest.cpp  documenttest.cpp  editannotationcontentstest.cpp  editformstest.cpp  formattest.cpp  generatorstest.cpp  keystroketest.cpp  kjsfunctionstest.cpp  mainshelltest.cpp  markdowntest.cpp  modifyannotationpropertiestest.cpp  parttest.cpp  readingmodetest.cpp  searchtest.cpp  signatureformtest.cpp  signunsignedfieldtest.cpp  suggestedfilenametest.cpp  translateannotationtest.cpp  visibilitytest.cpp
conf/: CMakeLists.txt  dlggeneral.cpp  dlggeneral.h  dlggeneralbase.ui  dlgpresentationbase.ui  editannottooldialog.cpp  okular.kcfg  okular_core.kcfg
core/: CMakeLists.txt  action.cpp  action.h  annotations.cpp  annotations.h  audioplayer.cpp  audioplayer.h  bookmarkmanager.cpp  bookmarkmanager.h  document.cpp  document.h  document_p.h  documentcommands.cpp  documentcommands_p.h  fileprinter.cpp  form.cpp  form.h  form_p.h  generator.cpp  generator.h  generator_p.h  global.h  misc.h  observer.cpp  observer.h  page.cpp  page.h  page_p.h  recolor.cpp  recolor.h  scripter.cpp  scripter.h  signatureutils.cpp  signatureutils.h  textpage.cpp  textpage.h  textpage_p.h
core/script/: builtin.js  event.cpp  executor_js.cpp  executor_js_p.h  executor_kjs.cpp  js_app.cpp  js_app_p.h  js_field.cpp  kjs_app.cpp  kjs_app_p.h  kjs_console_p.h  kjs_data.cpp  kjs_data_p.h  kjs_document_p.h  kjs_event.cpp  kjs_event_p.h  kjs_field.cpp  kjs_field_p.h  kjs_fullscreen_p.h  kjs_ocg_p.h  kjs_util.cpp  kjs_util_p.h
core/synctex/: synctex_parser.c
core/synctex/patches/: 19-fix-vasprintf-not-exists.diff  series
doc/: index.docbook
generators/: CMakeLists.txt
generators/chm/: CMakeLists.txt  generator_chm.cpp  org.kde.mobile.okular_chm.desktop
generators/chm/autotests/: CMakeLists.txt  chmgeneratortest.cpp
generators/chm/kio-msits/: CMakeLists.txt  msits.cpp
generators/chm/lib/: ebook_chm.cpp  ebook_epub.cpp  helper_search_index.cpp  helperxmlhandler_epubcontent.cpp
generators/comicbook/: CMakeLists.txt  okularApplication_comicbook.desktop  org.kde.mobile.okular_comicbook.desktop  org.kde.okular-comicbook.metainfo.xml  unrar.cpp
generators/djvu/: CMakeLists.txt  org.kde.mobile.okular_djvu.desktop
generators/dvi/: CMakeLists.txt  TeXFont_TFM.cpp  dviRenderer.cpp  dviRenderer_prescan.cpp  fontMap.cpp  generator_dvi.cpp  generator_dvi.h  org.kde.mobile.okular_dvi.desktop  pageNumber.h  pageSize.cpp  psgs.h  special.cpp
generators/epub/: CMakeLists.txt  converter.cpp  epubdocument.cpp  org.kde.mobile.okular_epub.desktop
generators/fax/: CMakeLists.txt  faxexpand.h  org.kde.mobile.okular_fax.desktop
generators/fictionbook/: CMakeLists.txt  converter.cpp  converter.h  org.kde.mobile.okular_fb.desktop
generators/kimgio/: CMakeLists.txt  org.kde.mobile.okular_kimgio.desktop
generators/kimgio/tests/: kimgiotest.cpp
generators/markdown/: CMakeLists.txt  converter.cpp  org.kde.mobile.okular_md.desktop
generators/mobipocket/: CMakeLists.txt  mobidocument.cpp  org.kde.mobile.okular_mobi.desktop
generators/plucker/: CMakeLists.txt  org.kde.mobile.okular_plucker.desktop
generators/poppler/: CMakeLists.txt  annots.cpp  annots.h  certificatetools.cpp  certificatetools.h  config-okular-poppler.h.cmake  formfields.cpp  formfields.h  generator_pdf.cpp  generator_pdf.h  imagescaling.cpp  imagescaling.h  org.kde.mobile.okular_pdf.desktop  pdfsettingswidget.cpp  pdfsettingswidget.h  pdfsignatureutils.cpp  pdfsignatureutils.h  popplerembeddedfile.h
generators/poppler/conf/: certsettings.kcfg  pdfsettings.kcfg  pdfsettingswidget.ui
generators/spectre/: CMakeLists.txt  generator_ghostview.cpp  generator_ghostview.h  org.kde.mobile.okular_ghostview.desktop  rendererthread.cpp  rendererthread.h
generators/tiff/: CMakeLists.txt  generator_tiff.cpp  (+1 more)
generators/txt/: CMakeLists.txt  document.cpp  org.kde.mobile.okular_txt.desktop
gui/: certificatemodel.cpp  pagepainter.cpp  pagepainter.h  signatureguiutils.cpp  signaturemodel.cpp  signaturemodel.h  tocmodel.cpp  tocmodel.h
interfaces/: CMakeLists.txt  viewerinterface.h
mobile/app/: CMakeLists.txt  (+4 more)
part/: CMakeLists.txt  DistinguishedNameParser.h  annotationactionhandler.cpp  annotationmodel.cpp  annotationpopup.cpp  annotationproxymodels.cpp  annotationwidgets.cpp  bookmarklist.cpp  bookmarklist.h  certificateviewer.cpp  colormodemenu.cpp  dlgaccessibility.cpp  dlgaccessibility.h  dlggeneral.cpp  embeddedfilesdialog.cpp  exportimagedialog.cpp  exportimagedialog.h  extensions.cpp  extensions.h  fileprinterpreview.cpp  formwidgets.cpp  formwidgets.h  guiutils.cpp  guiutils.h  kscroller.cpp  kscroller.h  latexrenderer.cpp  magnifierview.cpp  minibar.cpp  minibar.h  pageitemdelegate.cpp  pageitemdelegate.h  pagepainter.cpp  pagepainter.h  pageview.cpp  pageview.h  pageviewannotator.cpp  pageviewannotator.h  pageviewmouseannotation.cpp  pageviewutils.cpp  (+34 more)
part/data/: toolsQuick.xml
shell/: CMakeLists.txt  debug_distfreemode.h  debug_readingmode.h  distfreemodeaction.cpp  distfreemodeaction.h  main.cpp  okular_main.cpp  okular_main.h  okulartabwidget.cpp  okulartabwidget.h  org.kde.okular.appdata.xml  org.kde.okular.desktop  readingmodeaction.cpp  readingmodeaction.h  recentitemsmodel.cpp  shell.cpp  shell.h  shell.rc  shellutils.cpp  shellutils.h  welcomescreen.cpp
ui/: annotationactionhandler.cpp  annotationpopup.cpp  annotationpopup.h  bookmarklist.cpp  drawingtoolactions.cpp  formwidgets.cpp  pagepainter.cpp  pageview.cpp  pageview.h  pageviewannotator.cpp  pageviewannotator.h  pageviewutils.cpp  presentationwidget.cpp  presentationwidget.h  searchlineedit.cpp  side_reviews.cpp
(+26 files in other folders)
